force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/Forrester_Invoice_Charge_Collected__x.object-meta.xml
<CustomObject>
    <description>Forrester_Invoice_Charge_Collected</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_Invoice_Charge_Collected_View</externalName>
    <label>Forrester Invoice Charge Collected</label>
    <pluralLabel>Forrester Invoice Charge Collected</pluralLabel>
</CustomObject>