force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/ADJUSTMENT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ADJUSTMENT_FLAG__c</fullName>
    <description>ADJUSTMENT_FLAG</description>
    <externalDeveloperName>ADJUSTMENT_FLAG</externalDeveloperName>
    <label>ADJUSTMENT_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>