force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/APPLIED_DATE__c.field-meta.xml
<CustomField>
    <fullName>APPLIED_DATE__c</fullName>
    <description>APPLIED_DATE</description>
    <externalDeveloperName>APPLIED_DATE</externalDeveloperName>
    <label>APPLIED_DATE</label>
    <type>DateTime</type>
</CustomField>