force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/COLLECTED_AMT__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_AMT__c</fullName>
    <description>COLLECTED_AMT</description>
    <externalDeveloperName>COLLECTED_AMT</externalDeveloperName>
    <label>COLLECTED_AMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>