force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/COLLECTED_DATE__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_DATE__c</fullName>
    <description>COLLECTED_DATE</description>
    <externalDeveloperName>COLLECTED_DATE</externalDeveloperName>
    <label>COLLECTED_DATE</label>
    <type>DateTime</type>
</CustomField>