force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/COST_ELEMENT__c.field-meta.xml
<CustomField>
    <fullName>COST_ELEMENT__c</fullName>
    <description>COST_ELEMENT</description>
    <externalDeveloperName>COST_ELEMENT</externalDeveloperName>
    <label>COST_ELEMENT</label>
    <length>6</length>
    <type>Text</type>
</CustomField>