force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/COST_OBJECT__c.field-meta.xml
<CustomField>
    <fullName>COST_OBJECT__c</fullName>
    <description>COST_OBJECT</description>
    <externalDeveloperName>COST_OBJECT</externalDeveloperName>
    <label>COST_OBJECT</label>
    <length>7</length>
    <type>Text</type>
</CustomField>