force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/DOM_FOREIGN__c.field-meta.xml
<CustomField>
    <fullName>DOM_FOREIGN__c</fullName>
    <description>DOM_FOREIGN</description>
    <externalDeveloperName>DOM_FOREIGN</externalDeveloperName>
    <label>DOM_FOREIGN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>