force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/DUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>DUE_DATE__c</fullName>
    <description>DUE_DATE</description>
    <externalDeveloperName>DUE_DATE</externalDeveloperName>
    <label>DUE_DATE</label>
    <type>DateTime</type>
</CustomField>