force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/DUE_DATE_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>DUE_DATE_ORIGINAL__c</fullName>
    <description>DUE_DATE_ORIGINAL</description>
    <externalDeveloperName>DUE_DATE_ORIGINAL</externalDeveloperName>
    <label>DUE_DATE_ORIGINAL</label>
    <type>DateTime</type>
</CustomField>