force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>FILE_NAME__c</fullName>
    <description>FILE_NAME</description>
    <externalDeveloperName>FILE_NAME</externalDeveloperName>
    <label>FILE_NAME</label>
    <length>250</length>
    <type>Text</type>
</CustomField>