force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_CHARGE_RECID__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_CHARGE_RECID__c</fullName>
    <description>INVOICE_CHARGE_RECID</description>
    <externalDeveloperName>INVOICE_CHARGE_RECID</externalDeveloperName>
    <label>INVOICE_CHARGE_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>