force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_COMMENTS__c</fullName>
    <description>INVOICE_COMMENTS</description>
    <externalDeveloperName>INVOICE_COMMENTS</externalDeveloperName>
    <label>INVOICE_COMMENTS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>