force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_LINE_ITEM_DESC__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_LINE_ITEM_DESC__c</fullName>
    <description>INVOICE_LINE_ITEM_DESC</description>
    <externalDeveloperName>INVOICE_LINE_ITEM_DESC</externalDeveloperName>
    <label>INVOICE_LINE_ITEM_DESC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>