force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_LINE_ITEM_NUM__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_LINE_ITEM_NUM__c</fullName>
    <description>INVOICE_LINE_ITEM_NUM</description>
    <externalDeveloperName>INVOICE_LINE_ITEM_NUM</externalDeveloperName>
    <label>INVOICE_LINE_ITEM_NUM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>