force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_NUM_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_NUM_ORIGINAL__c</fullName>
    <description>INVOICE_NUM_ORIGINAL</description>
    <externalDeveloperName>INVOICE_NUM_ORIGINAL</externalDeveloperName>
    <label>INVOICE_NUM_ORIGINAL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>