force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/INVOICE_TYPE_ORIGINAL_DESCRIP__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE_ORIGINAL_DESCRIP__c</fullName>
    <description>INVOICE_TYPE_ORIGINAL_DESCRIP</description>
    <externalDeveloperName>INVOICE_TYPE_ORIGINAL_DESCRIP</externalDeveloperName>
    <label>INVOICE_TYPE_ORIGINAL_DESCRIP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>