force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/IP_RECID__c.field-meta.xml
<CustomField>
    <fullName>IP_RECID__c</fullName>
    <description>IP_RECID</description>
    <externalDeveloperName>IP_RECID</externalDeveloperName>
    <label>IP_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>