force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/JVT_RECID__c.field-meta.xml
<CustomField>
    <fullName>JVT_RECID__c</fullName>
    <description>JVT_RECID</description>
    <externalDeveloperName>JVT_RECID</externalDeveloperName>
    <label>JVT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>