force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/OUTSIDE_MATTER_RECID__c.field-meta.xml
<CustomField>
    <fullName>OUTSIDE_MATTER_RECID__c</fullName>
    <description>OUTSIDE_MATTER_RECID</description>
    <externalDeveloperName>OUTSIDE_MATTER_RECID</externalDeveloperName>
    <label>OUTSIDE_MATTER_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>