force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/RECEIPT_APPLIED_RECID__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_APPLIED_RECID__c</fullName>
    <description>RECEIPT_APPLIED_RECID</description>
    <externalDeveloperName>RECEIPT_APPLIED_RECID</externalDeveloperName>
    <label>RECEIPT_APPLIED_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>