force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/RECEIPT_APPLIED_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_APPLIED_TYPE__c</fullName>
    <description>RECEIPT_APPLIED_TYPE</description>
    <externalDeveloperName>RECEIPT_APPLIED_TYPE</externalDeveloperName>
    <label>RECEIPT_APPLIED_TYPE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>