force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/RECEIPT_SOURCE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_SOURCE_TYPE__c</fullName>
    <description>RECEIPT_SOURCE_TYPE</description>
    <externalDeveloperName>RECEIPT_SOURCE_TYPE</externalDeveloperName>
    <label>RECEIPT_SOURCE_TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>