force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/RR_DUE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>RR_DUE_FLAG__c</fullName>
    <description>RR_DUE_FLAG</description>
    <externalDeveloperName>RR_DUE_FLAG</externalDeveloperName>
    <label>RR_DUE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>