force-app/main/default/objects/Forrester_Invoice_Charge_Collected__x/fields/WRITEOFF_FLAG__c.field-meta.xml
<CustomField>
    <fullName>WRITEOFF_FLAG__c</fullName>
    <description>WRITEOFF_FLAG</description>
    <externalDeveloperName>WRITEOFF_FLAG</externalDeveloperName>
    <label>WRITEOFF_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>